added past sessions header

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="result">Result</string>
     <string name="error">Error</string>
     <string name="network_interrupt_message">Session was interrupted due to network issues. Please check your internet connection.</string>
+    <string name="past_sessions">Past sessions</string>
 </resources>
